--- a/EnovaApiService/packages.config
+++ b/EnovaApiService/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
+  <package id="Dapper" version="2.0.78" targetFramework="net472" />
+  <package id="Dapper.SqlBuilder" version="2.0.78" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
