--- a/EnovaApiService/EnovaApiService.csproj
+++ b/EnovaApiService/EnovaApiService.csproj
@@ -189,6 +189,8 @@
     <Compile Include="Dto\Kasa\SposobZaplatyDto.cs" />
     <Compile Include="Enova\EnovaClient.cs" />
     <Compile Include="Extensions\DtoConverterExtensions.cs" />
+    <Compile Include="Extensions\Soneta\ConnectionExtensions.cs" />
+    <Compile Include="Extensions\Soneta\SonetaSqlReader.cs" />
     <Compile Include="Framework\Helpers\IEnumerableExtensions.cs" />
     <Compile Include="Framework\Helpers\Sql.cs" />
     <Compile Include="Infrastructure\InfrastructureSetup.cs" />
