--- a/EnovaApiService/EnovaApiService.csproj
+++ b/EnovaApiService/EnovaApiService.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Configuration\InvalidConfigurationException.cs" />
     <Compile Include="Controllers\CommercialDocumentController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
+    <Compile Include="Controllers\DiscountGroupsController.cs" />
     <Compile Include="Controllers\DokumentyHandloweController.cs" />
     <Compile Include="Controllers\KontrahenciController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
